UX: Restructure sidebar workflow and improve audio trim controls
- Restructure sidebar into logical sections: Input, Processing, Monitoring & Export
- Add visual section headers with improved typography hierarchy
- Standardize sidebar to English language for consistency
- Replace dual sliders with compact range slider for audio trim
- Fix overlap issues between waveform and trim controls
- Unify Audio Trim section styling with card design (matches Audio File/Separation Settings)
- Optimize Separation Settings layout to prevent dropdown overlap
- Fix ensemble mode button state logic
- Add comprehensive UI structure and workflow navigation tests

--- a/resources/translations/de.json
+++ b/resources/translations/de.json
@@ -11,6 +11,15 @@
   "menu.help": "Hilfe",
   "menu.help.about": "Über",
 
+  "sidebar.input": "Input",
+  "sidebar.processing": "Processing",
+  "sidebar.monitoring": "Monitoring & Export",
+
+  "tabs.upload": "Upload",
+  "tabs.recording": "Recording",
+  "tabs.queue": "Queue",
+  "tabs.player": "Player",
+
   "upload.title": "Datei hochladen",
   "upload.drag_drop": "Dateien hierher ziehen oder klicken zum Durchsuchen",
   "upload.browse": "Durchsuchen...",
