feat(ui): Restructure PlayerWidget tabs and add sidebar Export section
BREAKING: Tab indices in PlayerWidget changed:
- Index 0: Stems (new - extracted from Playback)
- Index 1: Playback (no export buttons)
- Index 2: Looping (was Loop Preview at index 1)

Changes:
- Split Playback tab into 3 tabs: Stems, Playback, Looping
- Move Load Stems card to dedicated Stems tab
- Remove Export buttons from Playback tab
- Add new EXPORT section in left sidebar
- Add Export Mixed Audio and Export Loops buttons to sidebar
- Add stems_loaded_changed signal for cross-widget communication
- Add public export_mixed_audio() and export_loops() methods
- Update translations (en.json, de.json) with new keys

Sidebar structure:
- INPUT: Upload, Recording
- PROCESSING: Queue
- MONITORING: Player (renamed from 'Monitoring & Export')
- EXPORT: Export Mixed, Export Loops (new section)

--- a/resources/translations/de.json
+++ b/resources/translations/de.json
@@ -13,12 +13,19 @@
 
   "sidebar.input": "Input",
   "sidebar.processing": "Processing",
-  "sidebar.monitoring": "Monitoring & Export",
+  "sidebar.monitoring": "Monitoring",
+  "sidebar.export": "Export",
 
   "tabs.upload": "Upload",
   "tabs.recording": "Recording",
   "tabs.queue": "Queue",
   "tabs.player": "Player",
+  "tabs.stems": "Stems",
+  "tabs.playback": "Playback",
+  "tabs.looping": "Looping",
+  
+  "export.mixed_audio": "💾 Export Mixed",
+  "export.loops": "🔁 Export Loops",
 
   "upload.title": "Datei hochladen",
   "upload.drag_drop": "Dateien hierher ziehen oder klicken zum Durchsuchen",
