refactor(ui): Replace tabs with sidebar navigation for Monitoring section
BREAKING: PlayerWidget no longer uses QTabWidget internally

Changes:
- Replace QTabWidget with QStackedWidget in PlayerWidget
- Add 3 sidebar buttons under MONITORING: Stems, Playback, Looping
- Remove single 'Player' button from sidebar
- Add set_page() and get_current_page() public methods to PlayerWidget
- Sidebar buttons now control both content stack AND PlayerWidget page
- Update translations with emoji-prefixed button labels

Navigation structure:
- INPUT: Upload, Recording
- PROCESSING: Queue
- MONITORING: Stems, Playback, Looping (3 separate sidebar buttons)
- EXPORT: Export Mixed, Export Loops

Each MONITORING button navigates to PlayerWidget (index 3) and sets
the appropriate internal page (0=Stems, 1=Playback, 2=Looping).

--- a/resources/translations/de.json
+++ b/resources/translations/de.json
@@ -19,10 +19,9 @@
   "tabs.upload": "Upload",
   "tabs.recording": "Recording",
   "tabs.queue": "Queue",
-  "tabs.player": "Player",
-  "tabs.stems": "Stems",
-  "tabs.playback": "Playback",
-  "tabs.looping": "Looping",
+  "tabs.stems": "📂 Stems",
+  "tabs.playback": "▶ Playback",
+  "tabs.looping": "🎧 Looping",
   
   "export.mixed_audio": "💾 Export Mixed",
   "export.loops": "🔁 Export Loops",
