feat(ui): Replace Export dialogs with embedded widgets in main content area
BREAKING: Export Mixed and Export Loops no longer use pop-up dialogs

New files:
- ui/widgets/export_mixed_widget.py: Embedded widget for mixed audio export
- ui/widgets/export_loops_widget.py: Embedded widget for sampler loop export

Changes:
- Convert Export sidebar buttons from action buttons to navigation buttons
- Add ExportMixedWidget and ExportLoopsWidget to content stack (indices 4, 5)
- Export widgets receive PlayerWidget reference for accessing stems
- Widgets auto-refresh when stems are loaded/cleared
- All dialog functionality preserved: format selection, chunking, BPM detection

Navigation structure:
- INPUT: Upload, Recording
- PROCESSING: Queue
- MONITORING: Stems, Playback, Looping
- EXPORT: Export Mixed (page), Export Loops (page)

The export configuration is now displayed inline in the main content area,
providing better integration with the overall application flow.

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -22,9 +22,8 @@
   "tabs.stems": "📂 Stems",
   "tabs.playback": "▶ Playback",
   "tabs.looping": "🎧 Looping",
-
-  "export.mixed_audio": "💾 Export Mixed",
-  "export.loops": "🔁 Export Loops",
+  "tabs.export_mixed": "💾 Export Mixed",
+  "tabs.export_loops": "🔁 Export Loops",
 
   "upload.title": "Upload File",
   "upload.drag_drop": "Drag files here or click to browse",
