Add icons to Upload, Recording, and Queue sidebar tabs
- Add 📤 icon to Upload tab
- Add 🎤 icon to Recording tab
- Add 📋 icon to Queue tab
- Update translations (en.json, de.json) and fallback values in main_window.py
- Ensures consistent visual appearance across all sidebar tabs

--- a/resources/translations/de.json
+++ b/resources/translations/de.json
@@ -16,9 +16,9 @@
   "sidebar.monitoring": "Monitoring",
   "sidebar.export": "Export",
 
-  "tabs.upload": "Upload",
-  "tabs.recording": "Recording",
-  "tabs.queue": "Queue",
+  "tabs.upload": "📤 Upload",
+  "tabs.recording": "🎤 Recording",
+  "tabs.queue": "📋 Queue",
   "tabs.stems": "📂 Stems",
   "tabs.playback": "▶ Playback",
   "tabs.looping": "🎧 Looping",
